# myFirstRepository

src/ar_loc_base/launch/: test_ar.launch
src/ar_loc_base/src/ar_loc_base/: rover_kf.py  rover_kinematics.py  rover_odo.py  rover_pf.py
src/ar_mapping_base/launch/: test_ar.launch
src/ar_mapping_base/nodes/: rover_mapping.py
src/ar_mapping_base/src/ar_mapping_base/: mapping_kf.py
src/ar_slam_base/: manifest.xml
src/ar_slam_base/launch/: .test_ar.launch.swp  test_ar.launch  test_ar.launch.save
src/ar_slam_base/src/ar_slam_base/: mapping_kf.py
src/collision_avoidance/: CMakeLists.txt  package.xml
src/collision_avoidance/launch/: collision_avoidance.launch
src/collision_avoidance/src/: coll_avoid.cpp
src/collision_avoidance_base/launch/: ca.launch
src/face_detect/: CMakeLists.txt  package.xml
src/face_detect/msg/: Faces.msg
src/face_detect/scripts/: face_detect_node.py
src/face_detect_base/: CMakeLists.txt  package.xml
src/face_detect_base/launch/: face_detect.launch
src/face_detect_base/msg/: perso_roi_type.msg
src/face_detect_base/nodes/: rosfacedetect.py
src/floor_nav/: CMakeLists.txt  package.xml
src/floor_nav/cfg/: TaskGoToPose.cfg  TaskStareAtFace.cfg  TaskWaitForFace.cfg
src/floor_nav/launch/: launch_rover.launch  launch_vrep.launch
src/floor_nav/missions/: test_Wander.py  test_goto.py  test_roi.py
src/floor_nav/src/: SimTasksEnv.cpp
src/floor_nav/tasks/: TaskGoTo.cpp  TaskGoToPose.cpp  TaskGoToPose.h  TaskSetHeading.cpp  TaskStareAtFace.cpp  TaskStareAtFace.h  TaskWaitForFace.cpp  TaskWaitForFace.h  TaskWander.cpp
src/joystick_teleop/: CMakeLists.txt  package.xml
src/joystick_teleop/launch/: turtle_joy.launch
src/joystick_teleop/src/: joystick_teleop_node.cpp
src/keyboard_teleop/: CMakeLists.txt  manifest.xml  package.xml
src/keyboard_teleop/src/: teleop.py
src/obstacle_avoidance/src/: obstacle_avoidance.cpp
src/obstacle_avoidance_base/launch/: ca_planner.launch  ca_teleop.launch  mapping.launch
src/obstacle_avoidance_base/src/: obstacle_avoidance.cpp
src/occgrid_planner/: CMakeLists.txt
src/occgrid_planner/launch/: planner.launch  romain.launch  test_planner.launch
src/occgrid_planner/src/: occgrid_planner.cpp  occgrid_treasure.cpp  path_follower.cpp
src/occgrid_planner_base/: CMakeLists.txt
src/occgrid_planner_base/launch/: planner.launch  test.launch  test_planner.launch
src/occgrid_planner_base/src/: occgrid_planner.cpp  occgrid_treasure.cpp  own_astar.cpp
src/rover_driver_base/launch/: rover.launch  rover_odom.launch
src/rover_driver_base/src/rover_driver_base/: rover_kinematics.py
src/vrep_gmapping/: gmapping_bubblebot.launch  gmapping_odom_bubblerob.launch  gmapping_rover.launch
src/vrep_plugin/: CMakeLists.txt
